[project]
name = "doodle_jump"
version = "0.0.1"
description = "Computer Organization Midterm Project"
dependencies = [
    "mpu6050-raspberrypi==1.2",
    "smbus==1.1.post2",
    "pygame==2.6.1"
]
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

# Black formatter
[tool.black]
line-length = 79

