[project]
name = "doodle_jump"
version = "0.0.1"
description = "Computer Organization Midterm Project"
dependencies = [
    'pygame==2.6.1',
    'mpu6050-raspberrypi==1.2;platform_system == "Linux"',
    'smbus==1.1.post2;platform_system == "Linux"',
]
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

# Black formatter
[tool.black]
line-length = 79
